--- a/templates/space/product/update.html
+++ b/templates/space/product/update.html
@@ -63,10 +63,36 @@
 
     			{{ form.price.label }}
     			{{ form.price }}<br>
-    			<div class="custom-control custom-checkbox">
-    				{{ form.in_stock}}
-    				<label class="custom-control-label" for="id_in_stock">In Stock</label>
-    			</div><br>
+
+    			<div class="list-group-item">
+                    <div class="custom-control custom-checkbox">
+                        {{ form.in_stock}}
+                        <label class="custom-control-label" for="id_in_stock">In Stock</label>
+                    </div>
+                </div> 
+
+                <div class="list-group-item">
+                    <label>Product Request Method</label>
+                    <div class="custom-control custom-checkbox">
+                        {{ form.phone_request }}
+                        <label class="custom-control-label" for="id_phone_request">
+                            Phone Request
+                        </label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        {{ form.email_request }}
+                        <label class="custom-control-label" for="id_email_request">
+                            Email Request
+                        </label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        {{ form.messagebox_request }}
+                        <label class="custom-control-label" for="id_messagebox_request">
+                            MessageBox Request
+                        </label>
+                    </div>
+                </div>
+                <br>
     			<button class="btn btn-success">Update</button>
     		</form>
     		<br>
