--- a/static/css/generic/card.css
+++ b/static/css/generic/card.css
@@ -1,22 +1,18 @@
-.slider-card-container {
-	/*use custom font here*/
+.card-container {
 	position: relative; display: inline-block; overflow: hidden;
-	min-width: 280px; max-width: 300px; width: 100%; height: 320px;
 	background-color: #000; color: #fff;
 	text-align: left; font-size: 13px; margin: 5px;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
 }
 
-.slider-card-container * {
+.card-container * {
 	-webkit-transition: all 0.35s;
 	transition: all 0.35s;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-.slider-card-container img {
-	max-width: 100%; height: 100%; vertical-align: top;
-}.slider-card-container figcaption {
+.card-container figcaption {
 	position: absolute; top: 0; left: 0; right: 0; border: 0;
 	bottom: 0; padding: 20px; 
 	background-image: -webkit-linear-gradient(bottom,rgba(0,0,0,0.8) 
@@ -27,22 +23,53 @@
 	display: flex; flex-direction: column; 
 	justify-content: flex-end;
 }
-.slider-card-container h5 {
+.card-container h5 {
 	font-size: 25px; font-weight: 300; line-height: 1;
 	letter-spacing: 1px; text-transform: uppercase;
 	margin: 3px 0px;
 }
-.slider-card-container .title {
+.card-container .title {
 	color: #fff; font-weight: 300;
 }
 
-.slider-card-container a {
+.card-container a {
 	position: absolute; top: 0; bottom: 0; left: 0; right: 0;
 }
 
-.slider-card-container:hover img{
+.card-container:hover img{
 	-webkit-transform: scale(1.2);
 	transform: scale(1.2);
+}
+
+
+.dash-card {
+
+	max-width: 500px;  max-height: 500px; min-height: 210px;
+	width: 100%; height: 100%;
+}
+
+.dash-card img {
+	max-width: 100%; max-height: 500px;  min-height: 210px;  
+	width: 100%; vertical-align: top; height: 100%;
+}
+
+
+
+.slider-card {
+	min-width: 280px; max-width: 300px; width: 100%; height: 320px;
+}
+
+.slider-card img {
+	max-width: 100%; height: 100%; vertical-align: top;
+}
+
+
+
+.fixed-card {
+	width: 300px; height: 300px;
+}
+.fixed-card img {
+	width: 100%; vertical-align: top; height: 100%;
 }
 
 .react-btn {
@@ -50,4 +77,8 @@
 	border-color: transparent;
 	margin: 0 2px 0 2px; color: white;
 	display: inline-block; float: left;
+}
+
+.grid-item {
+	margin-top: 10px; margin-bottom: 10px;
 }
