--- a/templates/home/filtering/pinned.html
+++ b/templates/home/filtering/pinned.html
@@ -4,16 +4,17 @@
 {% block extra_head %}
 	<title>Filter Product</title>
     <link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/generic/dash-card.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/generic/card.css' %}">
 {% endblock %}
 
 
 {% block extra_content %}
     <h5 class="text-center">{{request.user.name}}'s' pinned products</h5><br><br>
-    <div class="container-fluid"></div>
-	<div class="row" id="cards-container" url="/api/product/?pinned_by={{request.user.id}}&format=json">
-        
+    <div class="container-fluid">
+        <div class="row justify-content-center" id="cards-container" url="/api/product/?pinned_by={{request.user.id}}&format=json">
+       </div>
     </div>
+	
 {% endblock %}
 
  
@@ -23,5 +24,5 @@
     <script type="text/javascript" src="{% static 'lib/js/react-dom.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'lib/js/browser.min.js' %}"></script>
 
-    <script type="text/babel" src="{% static 'react/product-cards.jsx' %}"></script>
+    <script type="text/babel" src="{% static 'react/product-cards.js' %}"></script>
 {% endblock %}
