--- a/templates/space/manage/index.html
+++ b/templates/space/manage/index.html
@@ -4,7 +4,7 @@
 {% block extra_head %}
 	<title>{{ space.name }}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/generic/dash-card.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/generic/card.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/space/manage/index.css' %}">
    
 {% endblock %}
@@ -97,7 +97,7 @@
         <div class="row">
             {% for product in products %}
                 <div class="col-md-4 grid-item">
-                    <figure class="dash-card-container">
+                    <figure class="card-container dash-card">
                         <img src="{{ product.logo_url }}">
                         <figcaption>
                             <h5 class="title">{{ product.title }}</h5>
