--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,6 +35,10 @@ a {
 	color: white;
 	width: 100%; display: block;
 	text-align: center;
-	margin:0px;
-	height: 100px;
+	margin:0px; padding: 10px;
+	min-height: 100px;
+}
+.col {
+	color: white; font-size: 20px; text-decoration: none;
+	font-family: monospace; text-align: center;
 }
