--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,24 @@
     <!-- footer -->
 
     <div class="footer-block">
-        <h4>Sakkhat</h4>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 list-group">
+                   <div><a class="col" href="/about/">About</a></div>
+                   <div><a class="col" href="/feedback/">Give us feedback</a></div>
+                </div>
+                <div class="col-md-4 list-group">
+                    <div><a class="col" href="https://github.com/sakkhat"><i class="fa fa-github"> Github</i></a></div>
+                   <div><a class="col" href="#"><i class="fa fa-facebook-square"> Facebook</i></a></div>
+                </div>
+                <div class="col-md-4 list-group">
+                   <div><a class="col" href="/terms/">Terms</a></div>
+                   <div><a class="col" href="/privacy-policy/">Privacy Policy</a></div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <h3 align="center" class="sicky-bottom">&#169;Sakkhat</h3>
     </div>
 
 	<!-- JQuery , Popper and Bootstrap Library -->
