--- a/static/css/generic/card.css
+++ b/static/css/generic/card.css
@@ -32,6 +32,13 @@
 	color: #fff; font-weight: 300;
 }
 
+.card-container .title1 {
+	color: #fff; font-weight: 300;
+}
+.card-container .title2 {
+	color: #42EEFF; font-weight: 300;
+}
+
 .card-container a {
 	position: absolute; top: 0; bottom: 0; left: 0; right: 0;
 }
@@ -71,6 +78,21 @@
 .fixed-card img {
 	width: 100%; vertical-align: top; height: 100%;
 }
+
+
+.category-card {
+	min-width: 280px; max-width: 300px; width: 100%; height: 300px;
+	box-shadow: 0px 0px 0px rgba(0,0,0,0); background-color: #fff;
+}
+.category-card img {
+	max-width: 100%; height: 100%; vertical-align: top; padding: 10px;
+}
+.category-card:hover img{
+	-webkit-transform: scale(1.2) rotate(5deg);
+	transform: scale(1.2) rotate(5deg);
+}
+
+
 
 .react-btn {
 	background-color: rgba(0,0,0,0.0);
