--- a/static/css/space/manage/create.css
+++ b/static/css/space/manage/create.css
@@ -5,3 +5,11 @@
 .space-create-form textarea {
 	height: 200px;
 }
+
+body {
+	background-color: rgb(10,10,10);
+}
+.view img{
+	width: 50%; height: 50%; overflow: hidden;
+	margin: auto; display: flex; align-self: center;
+}
