--- a/templates/home/manage/index.html
+++ b/templates/home/manage/index.html
@@ -37,7 +37,7 @@
                                 <h5 class="title1">{{item}}</h5>
                                 <h5 class="title2">{{item.total_products}}</h5>
                             </figcaption>
-                            <a href="#"></a>
+                            <a href="/space/product/all/?category={{item}}"></a>
                         </figure>
                     {% endfor %}
                 </div>
