--- a/templates/space/product/create.html
+++ b/templates/space/product/create.html
@@ -75,9 +75,11 @@
 
                     <input type="submit" value="Create" class="btn btn-success btn-block">
                 </form>
-
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6 view mt-3">
+                <h1 class="text-white text-center">Express your own products</h1>
+                <img src="{% static 'res/vector/shopper-with-bags.svg' %}">
+            </div>
             
         </div>
     </div>
