--- a/static/css/space/product/create.css
+++ b/static/css/space/product/create.css
@@ -6,3 +6,11 @@
 	width: 50px; height: 50px;
 	margin: 0px 20px;
 }
+body {
+	background-color: rgb(10,10,10);
+}
+.view img{
+	width: 50%; height: 50%; overflow: hidden;
+	margin-left: auto; margin-right: auto; display: flex; align-self: center;
+	margin-top: 0px;
+}
